--- a/_src/package.json
+++ b/_src/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "json-server": "json-server --watch db.js -p 3003"
+    "json-server": "json-server --watch ./config/db.js -p 3003"
   },
   "author": "ysknk",
   "license": "ISC",
@@ -18,6 +18,8 @@
     "ua-parser-js": "^0.7.17"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.8.0",
     "gulp-iconfont": "^10.0.2",
     "json-server": "^0.15.1",
     "node-aigis": "^1.4.1"
