--- a/_src/config/tasks/styleguide/src/aigis_config.yml
+++ b/_src/config/tasks/styleguide/src/aigis_config.yml
@@ -16,7 +16,7 @@ source_type:
   - .scss
 
 # The directory that aigis will build to
-dest: ../../../../../html/_styleguide
+dest: ../../../../../htdocs/_styleguide
 
 # The assets needed to build the docs
 # You may put doc related assets here too: images, css, etc.
@@ -53,7 +53,7 @@ timestamp_format: 'YYYY/MM/DD'
 
 preview_class: aigis-preview
 
-component_dir: ./html
+component_dir: ./htdocs
 
 output_collection:
   - category
