--- a/_src/config/tasks/styleguide/src/aigis_config.yml
+++ b/_src/config/tasks/styleguide/src/aigis_config.yml
@@ -22,7 +22,7 @@ dest: ../../../../../htdocs/_styleguide
 # You may put doc related assets here too: images, css, etc.
 dependencies:
   - ./aigis_assets
-  # - ../../../../../html/assets
+  # - ../../../../../htdocs/assets
 
 # Index page created from markdown file
 index: ./index.md
