--- a/_src/config/tasks/styleguide/src/aigis_config.yml
+++ b/_src/config/tasks/styleguide/src/aigis_config.yml
@@ -6,7 +6,7 @@ name: Styleguide
 source:
   # - ./css
   # - ./demo.md
-  - ../../../../htdocs/assets/css/
+  - ../../../../htdocs/css/
 
 # The types that aigis will scan to document comment
 source_type:
